[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dtool"
description = "dtool command line client for managing data"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Tjelvar Olsson", email = "tjelvar.olsson@gmail.com"}
]
dynamic = ["version"]
dependencies = [
    "dtoolcore==3.18.3",
    "dtool-cli==0.7.1",
    "dtool-create==0.23.4",
    "dtool-info==0.16.2",
    "dtool-symlink==0.3.1",
    "dtool-http==0.5.1",
    "dtool-config==0.4.1",
    "dtool-overlay==0.3.1",
    "dtool-annotation==0.1.1",
    "dtool-tag==0.1.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx_rtd_theme"
]

[project.urls]
Documentation = "https://dtool.readthedocs.io"
Repository = "https://github.com/jic-dtool/dtool"
Changelog = "https://github.com/jic-dtool/dtool/blob/master/CHANGELOG.rst"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dtool/version.py"

[tool.setuptools]
packages = ["dtool"]
